@@ -1,4 +1,7 @@
 ======================================================================
+2009-05-02 Added options to plotfile based on question from
+           Joseph Smidt and patch by Matthias Michler. - EF
+
 2009-05-01 Changed add_artist and similar Axes methods to
            return their argument. - EF
 
